@@ -11,6 +11,8 @@ Features added
 * #3096: ``'maxlistdepth'`` key to work around LaTeX list limitations
 * #3060: autodoc supports documentation for attributes of Enum class. Now autodoc render
   just the value of Enum attributes instead of Enum attribute representation.
+* Add ``--extensions`` to ``sphinx-quickstart`` to support enable arbitary
+  extensions from command line (ref: #2904)
 
 Bugs fixed
 ----------
